[package]
name = "hex264_test"
authors = ["C2Rust"]
version = "0.0.0"
publish = false
edition = "2021"
autobins = false

[workspace]
members = []

[dependencies]
argp = "0.4"
c2rust-bitfields = "0.21.0"
log = "0.4"
strum = { version = "0.27", features = ["derive"] }

[lib]
name = "hex264_test"
path = "lib.rs"
crate-type = ["staticlib", "rlib"]
