[workspace]
members = []
[package]
name = "hex264"
authors = ["C2Rust"]
version = "0.0.0"
publish = false
edition = "2024"
autobins = false

[lib]
name = "hex264"
path = "lib.rs"
crate-type = ["staticlib", "rlib"]
[dependencies]
c2rust-bitfields = "0.22.1"
libc = "0.2"
log = "0.4"


[profile.release]
strip = "debuginfo"
